--- a/sleuth.html
+++ b/sleuth.html
@@ -1,1 +1,29 @@
+nav {
+  list-style-type: none;
+  background-color: #100;
+  width: 100%;
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  top: 0;
+  margin: 0;
+}
+.navli {
+  float: left;
+}
 
+.navli a {
+   text-transform: uppercase;
+  display: block;
+  color: purple;
+  text-decoration: none;
+  padding: 15px 100px;
+}
+
+.navli a:hover {
+  background-color: purple;
+  color: lavender;
+}
+li {
+  list-style-position: inside;
+}
