--- a/humidity.html
+++ b/humidity.html
@@ -1,29 +1,6 @@
-nav {
-  list-style-type: none;
-  background-color: #100;
-  width: 100%;
-  overflow: hidden;
-  position: fixed;
-  left: 0;
-  top: 0;
-  margin: 0;
-}
-.navli {
-  float: left;
-}
-
-.navli a {
-   text-transform: uppercase;
-  display: block;
-  color: purple;
-  text-decoration: none;
-  padding: 15px 100px;
-}
-
-.navli a:hover {
-  background-color: purple;
-  color: lavender;
-}
-li {
-  list-style-position: inside;
-}
+<nav>
+    <li class="navli"><a href="index.html"> Home </a></li>
+    <li class="navli"><a href="bobapp.html"> Bob Ross App </a></li>  
+    <li class="navli"><a href="humidity.html"> Humidity App </a></li> 
+    <li class="navli"><a href="sleuth.html"> Color Sleuth </a></li> 
+  </nav>
