--- a/sleuth.html
+++ b/sleuth.html
@@ -1,6 +1,16 @@
-<nav>
+<html>
+  
+  <head> <link rel="stylesheet" href="style.css">
+    
+   
+  
+  <body>
+    
+    <nav>
     <li class="navli"><a href="index.html"> Home </a></li>
     <li class="navli"><a href="bobapp.html"> Bob Ross App </a></li>  
     <li class="navli"><a href="humidity.html"> Humidity App </a></li> 
     <li class="navli"><a href="sleuth.html"> Color Sleuth </a></li> 
   </nav>
+
+      </html>
