--- a/bobapp.html
+++ b/bobapp.html
@@ -1,5 +1,7 @@
 <html>
- 
+
+ <head> <link rel="stylesheet" href="style.css">
+  
   <body>
     
   <nav>
@@ -12,5 +14,7 @@
   <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/D5GZHxuO6EFvk5ToPahnxaHeY4RA9s6kuG9oZX2yUpd/embed?nosource"></iframe>
     
     </body>
-  
+
+ </head>
+ 
 </html>
