--- a/humidity.html
+++ b/humidity.html
@@ -1,5 +1,7 @@
 <html>
- 
+
+ <head> <link rel="stylesheet" href="style.css">
+  
   <body>
     
   <nav>
@@ -12,5 +14,7 @@
   <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/XOqJrs_mA4NJl2W7EVrIO1_Blynjy7agNsSztbFXq8g/embed?nosource"></iframe>
     
     </body>
+
+ </head>
   
 </html>
