--- a/sleuth.html
+++ b/sleuth.html
@@ -1,4 +1,6 @@
 <html>
+
+<head> <link rel="stylesheet" href="style.css">
  
     <body>
     
@@ -12,5 +14,7 @@
   <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/QEqIoHT3q5vTEA4-zUrbhGWNvhqg07zaxTUCNUFU1u6/embed?nosource"></iframe>
     
     </body>
-  
+
+</head>
+ 
 </html>
