--- a/bobapp.html
+++ b/bobapp.html
@@ -10,7 +10,9 @@
     <li class="navli"><a href="humidity.html"> Humidity App </a></li> 
     <li class="navli"><a href="sleuth.html"> Color Sleuth </a></li> 
   </nav>
-  
+    <br>
+      <br>
+      <h1> Bob Ross App </h1>
   <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/D5GZHxuO6EFvk5ToPahnxaHeY4RA9s6kuG9oZX2yUpd/embed?nosource"></iframe>
     
     </body>
