--- a/humidity.html
+++ b/humidity.html
@@ -10,7 +10,9 @@
     <li class="navli"><a href="humidity.html"> Humidity App </a></li> 
     <li class="navli"><a href="sleuth.html"> Color Sleuth </a></li> 
   </nav>
-  
+    <br>
+      <br>
+      <h1> Humidity App </h1>
   <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/XOqJrs_mA4NJl2W7EVrIO1_Blynjy7agNsSztbFXq8g/embed?nosource"></iframe>
     
     </body>
