--- a/sleuth.html
+++ b/sleuth.html
@@ -10,7 +10,9 @@
     <li class="navli"><a href="humidity.html"> Humidity App </a></li> 
     <li class="navli"><a href="sleuth.html"> Color Sleuth </a></li> 
   </nav>
-  
+    <br>
+      <br>
+      <h1> Color Sleuth App </h1>
   <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/QEqIoHT3q5vTEA4-zUrbhGWNvhqg07zaxTUCNUFU1u6/embed?nosource"></iframe>
     
     </body>
